--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cloudinary": "^2.7.0",
     "howler": "^2.2.4",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.544.0",
     "mongoose": "^8.18.0",
     "next": "15.5.2",
     "react": "19.1.0",
